fix layout on ie 11

--- a/code/css/content/form.css
+++ b/code/css/content/form.css
@@ -163,7 +163,7 @@
 }
 
 .formContent .contentBody .orderForm label.unset {
-    width: unset;
+    width: auto;
 }
 
 .formContent .contentBody .orderForm h2 ruby rt {
